# FAIRWork-Resource-Allocation-Demonstrator-using-NN

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
resources/: Knurled_screws.stp  knowledge_base_config.yaml.example  knowledge_base_credentials.yaml.example
resources/example-traing-data/: dummy_0bbe501c-399d-421a-8eaa-f55327069697.csv  dummy_0c0dad5f-08a5-452f-ada5-34c9928ff08b.csv
resources/trained-models/demonstrator-v01/: model1.pt
src/fairwork_jotne/: REST_API_Examples.ipynb
src/fairwork_rwth/demonstrator_ml/: demonstrator_nn_v01.py
src/fairwork_rwth/dummy_data/: adapted_jotne_example_.py  dummy_data_generator.py
src/fairwork_rwth/knowledgebase/: auth_controller.py  knowledga_base_config.py
src/fairwork_rwth/rest/: faskx_demo_endpoint.py
src/fairwork_rwth/utils/: [depracted]swagger_to_api_endpoints.py  fairwork_banner.py  logger.py  wzl_banner.py
src/rwth/demonstrator_ml/: demonstrator_nn_v01.py
src/rwth/dummy_data/: adapted_jotne_example_.py  dummy_data_generator.py
src/rwth/knowledgebase/: auth_controller.py  knowledga_base_config.py
src/rwth/rest/: faskx_demo_endpoint.py  production.py
src/rwth/utils/: logger.py
src/swagger_client/: __init__.py  configuration.py
src/swagger_client/api/: __init__.py  admin_controller_api.py  authorization_controller_api.py  baseline_controller_api.py  breakdown_controller_api.py  converter_controller_api.py  data_controller_api.py  exchange_controller_api.py  hash_controller_api.py  ifd_controller_api.py  notification_controller_api.py  organisation_controller_api.py  (+6 more)
(+103 files in other folders)
