[metadata]
name = FAIRWork AI Services Development
author = Alexander Nasuta
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    rwth
    rwth.demonstrator_ml
    rwth.dummy_data
    rwth.knowledgebase
    rwth.rest
    rwth.utils
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[flake8]
max-line-length = 160